# LiteHtmlSharp

./: .editorconfig  .gitignore  .gitmodules  DEVELOPMENT.md  LICENSE  LiteHtml.opensdf  LiteHtml.sln  LiteHtml.userprefs  LiteHtmlSharp.Mac.nuspec  LiteHtmlSharp.Mac.sln  LiteHtmlSharp.Mac.userprefs  LiteHtmlSharp.Wpf.nuspec  LiteHtmlSharp.sln  LiteHtmlSharp.userprefs  README  README.md
Browser/: Browser.csproj  Container.cs  FontInfo.cs  HTMLVisual.cs  LiteHtmlDelegates.cs  LiteHtmlStructs.cs  MainWindow.xaml  MainWindow.xaml.cs  WPFContainer.cs
Browser/Properties/: Resources.Designer.cs  Settings.Designer.cs
CppSharpGen/: CppSharpGen.csproj  CppSharpGen.userprefs  LiteHtmlLibrary.cs  Program.cs  Sample.h  liblitehtml.dylib  packages.config
CppSharpGen/CppSharpAssemblies/: CLI.Gen.exe.mdb  CSharp.CSharp.dll.mdb  CSharp.Gen.exe.mdb  CSharp.Tests.CSharp.dll.mdb  Common.CSharp.dll.mdb  Common.Gen.exe.mdb  Common.Tests.CSharp.dll.mdb  CppSharp.AST.dll.mdb  CppSharp.Generator.Tests.dll.mdb  CppSharp.Generator.dll.mdb  CppSharp.Parser.Bootstrap.exe.mdb  CppSharp.Parser.CSharp.dll.mdb  CppSharp.Parser.Gen.exe.mdb  CppSharp.Runtime.dll.mdb  CppSharp.dll.mdb  Encodings.CSharp.dll.mdb  Encodings.Gen.exe.mdb  Encodings.Tests.CSharp.dll.mdb  NamespacesBase.CSharp.dll.mdb  NamespacesBase.Gen.exe.mdb  NamespacesBase.Tests.CSharp.dll.mdb  NamespacesDerived.CSharp.dll.mdb  NamespacesDerived.Gen.exe.mdb  NamespacesDerived.Tests.CSharp.dll.mdb  StandardLib.Gen.exe.mdb  TypeMaps.CSharp.dll.mdb  TypeMaps.Gen.exe.mdb  TypeMaps.Tests.CSharp.dll.mdb  VTables.CSharp.dll.mdb  VTables.Gen.exe.mdb  VTables.Tests.CSharp.dll.mdb  libCLI.Native.dylib  libCSharp.Native.dylib  libCommon.Native.dylib  libEncodings.Native.dylib  libNamespacesBase.Native.dylib  libNamespacesDerived.Native.dylib  libStandardLib.Native.dylib  libTypeMaps.Native.dylib  libVTables.Native.dylib
CppSharpGen/Properties/: AssemblyInfo.cs
Example.Avalonia/: App.axaml  App.axaml.cs  Example.Avalonia.csproj  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  SizeToContentTestWindow.axaml  SizeToContentTestWindow.axaml.cs  master.css
Example.Mac/: AppDelegate.cs  Example.Mac.csproj  Info.plist  Main.cs
Example.Wpf/: App.xaml  App.xaml.cs  Example.Wpf.csproj  Example.Wpf.sln  MainWindow.xaml  MainWindow.xaml.cs
Example.Wpf/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
LiteHtmlLib/: CMakeLists.txt  DocContainer.cpp  DocContainer.h  Globals.cpp  Globals.h  LiteHtml.dylib.mdproj  LiteHtmlLib.cpp  LiteHtmlLib.md.pc  LiteHtmlLib.mdproj  LiteHtmlLib.sln  LiteHtmlLib.vcxproj  LiteHtmlLib.vcxproj.filters  ManagedCallbacks.cpp  ManagedCallbacks.h  ReadMe.txt  build.sh  dllmain.cpp  myclass.cpp  myclass.h  stdafx.cpp
LiteHtmlLib/lib_dll/: CMakeLists.txt  build-cross.sh
LiteHtmlLib/lib_dylib/: CMakeLists.txt  build.sh
LiteHtmlLib/lib_so/: CMakeLists.txt  build-cross.sh  build.sh
LiteHtmlLib/lib_static/: CMakeLists.txt  build.sh
LiteHtmlLib/lib_static/arch/: msvc-x64.cmake  msvc-x86.cmake
LiteHtmlLib/src/: CallbackDelegates.h  DocContainer.cpp  DocContainer.h  Globals.cpp  Globals.h  LiteHtmlLib.cpp  ManagedCallbacks.cpp  TagElement.cpp  TagElement.h  myclass.cpp
LiteHtmlSharp/: Container.cs  Delegates.cs  Document.cs  FontInfo.cs  ILibInterop.cs  IncludedMasterCss.cs  LiteHtmlDelegates.cs  LiteHtmlSharp.csproj  LiteHtmlSharp.projitems  LiteHtmlSharp.shproj  LiteHtmlSharp.targets  LiteHtmlSharp.userprefs  LiteHtmlStructs.cs  MyClass.cs  PInvoke.cs  PInvokes.cs  Structs.cs  Utf8Util.cs  ViewportContainer.cs
LiteHtmlSharp.Avalonia/: AvaloniaContainer.cs  FontInfo.cs  IncludedMasterCss.cs  LiteHtmlAvaloniaControl.cs  LiteHtmlExtensions.cs  LiteHtmlSharp.Avalonia.csproj
LiteHtmlSharp.CoreGraphics/: CGContainer.cs  CGExtensions.cs  FontHolder.cs  ImageHolder.cs  LiteHtmlSharp.CoreGraphics.projitems  LiteHtmlSharp.CoreGraphics.shproj
LiteHtmlSharp.Mac/: ICustomTagView.cs  LiteHtmlNSButton.cs  LiteHtmlNSInput.cs  LiteHtmlNSPanel.cs  LiteHtmlNSView.cs  LiteHtmlNSWindow.cs  LiteHtmlSharp.Mac.csproj  LiteHtmlWindowHelper.cs
LiteHtmlSharp.Mac/Properties/: AssemblyInfo.cs
LiteHtmlSharp.MacBrowser/: AppDelegate.cs  BrowserWindow.cs  Info.plist  LiteHtmlSharp.MacBrowser.csproj  MacTest.userprefs  Main.cs
LiteHtmlSharp.MacBrowser/ExampleWebPage/: about.css  core.css  index.html
LiteHtmlSharp.MacBrowser/WebPage/da900255-ffe1-46f2-a78f-88f6ac671c49_files/: about.css
LiteHtmlSharp.Shared/: LibInterop.cs  LiteHtmlSharp.Shared.projitems  LiteHtmlSharp.Shared.shproj
LiteHtmlSharp.Wpf/: FontInfo.cs  IncludedMasterCss.cs  LiteHtmlExtensions.cs  LiteHtmlPanel.cs  LiteHtmlSharp.Wpf.csproj  WPFContainer.cs
LiteHtmlSharp.Wpf/Browser/: App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
LiteHtmlSharp.Wpf/Browser/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
LiteHtmlSharp.Wpf/Properties/: AssemblyInfo.cs
LiteHtmlSharp.iOS/: LiteHtmlSharp.iOS.csproj  LiteHtmlUIView.cs
LiteHtmlSharp.iOS/Properties/: AssemblyInfo.cs
LiteHtmlSharp/Properties/: AssemblyInfo.cs
LiteHtmlVcx/: litehtml.vcxproj  litehtml.vcxproj.filters
LiteHtmlWpf/: FontInfo.cs  HTMLVisual.cs  LiteHtmlWpf-Shared.projitems  LiteHtmlWpf-Shared.shproj  LiteHtmlWpf.csproj  WPFContainer.cs
LiteHtmlWpf/Properties/: AssemblyInfo.cs
MacTest/: AppDelegate.cs  AppDelegate.designer.cs  Info.plist  LiteHtmlCGContainer.cs  LiteHtmlMacContainer.cs  LiteHtmlMacExtensions.cs  LiteHtmlView.cs  MacLiteHtmlContainer.cs  MacTest.csproj  MacTest.sln  MacTest.userprefs  Main.cs  TestWindow.cs  TestWindow.designer.cs
MacTest/ConsoleTest/: ConsoleTest.csproj  Program.cs
MacTest/ConsoleTest/Properties/: AssemblyInfo.cs
MacTest/LiteHtmlCGContainer/: LiteHtmlCGContainer.csproj
MacTest/LiteHtmlCGContainer/Properties/: AssemblyInfo.cs
MacTest/WebPage/: da900255-ffe1-46f2-a78f-88f6ac671c49.html
MacTest/WebPage/da900255-ffe1-46f2-a78f-88f6ac671c49_files/: about.css  core.css
native/: liblitehtml-osx-x64.dylib
runtimes/osx-x64/native/: liblitehtml.dylib
